--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     command: --smallfiles
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: toffysoft
-      MONGO_INITDB_ROOT_PASSWORD: toffy1234
+      MONGO_INITDB_ROOT_USERNAME: "${DB_USERNAME}"
+      MONGO_INITDB_ROOT_PASSWORD: "${DB_PASSWORD}"
     ports:
       - "27017:27017"
