--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "dev": "docker-compose up -d && npm run dev:express-api",
     "express-api": "cd ./express-api && npm start",
     "dev:express-api": "cd ./express-api && npm run dev",
     "dev:react-cms": "cd ./react-cms && npm start",
